+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.5?
=============================

*Release date: 11-Mar-2008*

What's New in Python 2.4.5c1?
=============================

*Release date: 02-Mar-2008*


Core and builtins
-----------------

- Added checks for integer overflows, contributed by Google. Some are
  only available if asserts are left in the code, in cases where they
  can't be triggered from Python code.

- patch #1630975: Fix crash when replacing sys.stdout in sitecustomize.py

Extension Modules
-----------------

Library
-------

- HTML-escape the plain traceback in cgitb's HTML output, to prevent
  the traceback inadvertently or maliciously closing the comment and
  injecting HTML into the error page.

Tests
-----

Build
-----


What's New in Python 2.4.4?
===========================

*Release date: 18-OCT-2006*

Build
-----

- Bug #1578513: Cross compilation was broken by a change to configure. 
Repair so that it's back to how it was in 2.4.3.

What's New in Python 2.4.4c1?
=============================

*Release date: 11-OCT-2006*

Core and builtins
-----------------

- Bug #1456209: In some obscure cases it was possible for a class with a
  custom ``__eq__()`` method to confuse dict internals when class instances
  were used as a dict's keys and the ``__eq__()`` method mutated the dict.
  No, you don't have any code that did this ;-)

- A number of places, including integer negation and absolute value,
  were fixed to not rely on undefined behaviour of the C compiler
  anymore.

- Patch #1567691: super() and new.instancemethod() now don't accept
  keyword arguments any more (previously they accepted them, but didn't
  use them).

- staticmethod() and classmethod() also now complain about keyword args
  instead of silently ignoring them.

- Bug #1331062: Fix error in UTF-7 codec.

- Bug #1365916: Fix an int/long mismatch in the sorted() built-in.
